	(CygbuildCommandMain): Remove options --init-pkgdb,
	--nomore-space. Add option --lzma.
	(CygbuildCompressManualPage): New.
	(CygbuildBootVariablesGlobalMain): Add lzma, lzop, rzip to
	cygbuild_opt_exclude_archive_files
	(CygbuildFileTypeByExtension): Add Ruby.
	(CygbuildCygcheckMainOld): Remove.
	(CygbuildCmdInstallCheckBinFiles): Add Ruby.

2008-02-28  Jari Aalto  <jari.aalto@cante.net>

	* bin/cygbuild.sh: Add support for new option
	cygbuild-no-docdir-guess.
	(CygbuildExitIfEmpty): New.
	(CygbuildMakefileRunInstallCygwinOptions): Check missing
	Makefile. Adjust PREFIX for perl installs.
	(CygbuildMakefileRunInstall): Change 'docdir' from /usr/share/doc/PKG
	to package specific /usr/share/doc/PKG-VER.
	(CygbuildConfPerlMain): Read configure.env.options.
	Display Perl call with --verbose.
	(CygbuildCommandMain): Improve command 'import'.
	(CygbuildPod2man): Fix call to date(1).
	(CygbuildCommandMainCheckSpecial): Support multiple packages with
	command cygsrc.
	(CygbuildStrToRegexpSafe): Add characters: ()[].

	* etc/template/install.tar.options.tmp: Add new options
	--exclude=cygbuild-no-docdir-guess

	* bin/cygbuild.pl: (HELP::OPTIONAL EXTERNAL FILES::install.tar.options)
	Document new option cygbuild-no-docdir-guess

2008-02-27  Jari Aalto  <jari.aalto@cante.net>

	* bin/cygbuild.sh: (CygbuildInstallDefaultsPostinstall): Escape
	variable correcly, so the postinstall file contains contains the
	name, not the value.
	(CygbuildInstallPackageDocs): Use relative paths for ../examples
	as necessary.

2008-02-26  Jari Aalto  <jari.aalto@cante.net>

	* bin/cygbuild.sh:
	(CygbuildMakefileRunInstall): Remove call to
	`CygbuildDebianRules2MakefileMaybe'.
	(CygbuildDebianRules2MakefileMaybe): Remove.
	(CygbuildDebianRules2Makefile): Remove.
	(CygbuildMakefileRunInstall): Notify about missing makefile.
	(CygbuildInstallPackageDocs): Install also directories
	examples, example and sample.

	* bin/cygbuild.pl (DebianRulesInstalldirs): Remove.
	(DebianRulesInstall): Remove.